--- a/assets/style.css
+++ b/assets/style.css
@@ -17,5 +17,33 @@
 }
 
 .footer {
+
+}
+
+.article1 {
+
+}
+
+.article2 {
+    
+}
+
+.article3 {
+    
+}
+
+.section1 {
+
+}
+
+.section2 {
+    
+}
+
+.section3 {
+    
+}
+
+.section4 {
     
 }
