Borders for all sections of grid

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,45 +5,45 @@
 }
 
 .header {
-
+    border: 1px solid red;
 }
 
 .section {
-
+    border: 1px solid red;
 }
 
 .aside {
-
+    border: 1px solid red;
 }
 
 .footer {
-
+    border: 1px solid red;
 }
 
 .article1 {
-
+    border: 1px solid red;
 }
 
 .article2 {
-    
+    border: 1px solid red;
 }
 
 .article3 {
-    
+    border: 1px solid red;
 }
 
 .section1 {
-
+    border: 1px solid red;
 }
 
 .section2 {
-    
+    border: 1px solid red;
 }
 
 .section3 {
-    
+    border: 1px solid red;
 }
 
 .section4 {
-    
+    border: 1px solid red;
 }
