--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,16 @@
 .grid {
     display: grid;
-    border: 1px solid green;
     width: 100vw;
     text-align: center;
+    border: 1px solid green;
 }
 
 .header {
     border: 1px solid red;
+}
+
+.main {
+    display: grid;
 }
 
 .section {
