--- a/assets/style.css
+++ b/assets/style.css
@@ -21,12 +21,13 @@
     border: 1px solid red;
 }
 
+/*
 .aside {
     display: grid;
     grid-template-rows: 1fr;
     width: 50%;
     border: 1px solid red;
-}
+} */
 
 .footer {
     display: grid;
