Centered content in footer

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
+    align-content: center;
     height: 15vh;
     border: 1px solid red;
 }
