Added grid for article 12

--- a/assets/style.css
+++ b/assets/style.css
@@ -38,8 +38,11 @@
     border: 1px solid red;
 }
 
+.article12 {
+    display: grid;
+}
+
 .article1 {
-    width: 50%;
     border: 1px solid red;
 }
 
