--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 15px;
+    align-content: center;
     border: 1px solid green;
 }
 
