column for article3

--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,8 @@
 
 .article3 {
     display: grid;
+    grid-template-columns: 1fr;
+    
     align-content: center;
     border: 1px solid red;
 }
