--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@
 .article12 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100%;
     gap: 15px;
     align-content: center;
     border: 1px solid green;
