--- a/assets/style.css
+++ b/assets/style.css
@@ -44,11 +44,12 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100%;
     gap: 15px;
-    align-content: center;
+    text-align: center;
     border: 1px solid green;
 }
 
 .article1 {
+    display: grid;
     border: 1px solid red;
 }
 
