--- a/assets/style.css
+++ b/assets/style.css
@@ -77,6 +77,10 @@
     border: 1px solid red;
 }
 
+.section1, .section2, .section3, .section4 {
+    background-color: #fafafa;
+}
+
 .section1 {
     border: 1px solid red;
 }
