--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,7 @@
 .footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 70%;
     gap: 20px;
     align-content: center;
     height: 15vh;
