--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@
     grid-template-columns: 1fr 30%;
     grid-template-rows: 1fr;
     height: 50vh;
+    background-color: #fff8e3;
     /* border: 1px solid red;*/
 }
 
