Columns for section

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,7 @@
 
 .section {
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(1000px, 200px));
     gap: 15px;
     height: 95%;
     background-color: #fff8e3;
