--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100%;
     gap: 15px;
+    width: 95%;
     text-align: center;
     /* border: 1px solid green;*/
 }
