--- a/assets/style.css
+++ b/assets/style.css
@@ -3,12 +3,12 @@
     width: 100vw;
     text-align: center;
     /* border: 1px solid green; */
-}
+} /* Весь grid */
 
 .header {
     background-color: #e0e0e0;
     /* border: 1px solid red;*/
-}
+} /* [Шапка страницы] */
 
 .main {
     display: grid;
@@ -17,7 +17,7 @@
     height: 50vh;
     background-color: #fff8e3;
     /* border: 1px solid red;*/
-}
+} /* Основное содержимое страницы */
 
 .section {
     display: grid;
@@ -27,7 +27,7 @@
     justify-items: center;
     background-color: #fff8e3;
     /* border: 1px solid red;*/
-}
+} /* [Основная часть, Ещё 1,2,3] */
 
 /*
 .aside {
@@ -35,7 +35,7 @@
     grid-template-rows: 1fr;
     width: 50%;
     border: 1px solid red;
-} */
+} */ /* aside */
 
 .footer {
     display: grid;
@@ -46,15 +46,15 @@
     height: 15vh;
     background-color: #e0e0e0;
     /* border: 1px solid red;*/
-}
+} /* [Футер] */
 
 .article {
     background-color: #ddeccb;
-}
+} /* [Боковая область] */
 
 .article1, .article2, .article3 {
     background-color: #feeab9;
-}
+} /* Фон для Ещё 1,2,3 */
 
 .article12 {
     display: grid;
@@ -64,45 +64,45 @@
     width: 95%;
     text-align: center;
     /* border: 1px solid green;*/
-}
+} /* Ещё 1,2 в одну строку */
 
 .article1 {
     display: grid;
     align-content: center;
     /* border: 1px solid red;*/
-}
+} /* [Ещё 1] */
 
 .article2 {
     display: grid;
     align-content: center;
     /* border: 1px solid red;*/
-}
+} /* [Ещё 2] */
 
 .article3 {
     display: grid;
     width: 95%;
     align-content: center;
     /* border: 1px solid red;*/
-}
+} /* [Ещё 3] */
 
 .section1, .section2, .section3, .section4 {
     display: grid;
     align-content: center;
     background-color: #fafafa;
-}
+} /* Всё секции футера в ряд */
 
 .section1 {
     /* border: 1px solid red;*/
-}
+} /* [Секция футера 1] */
 
 .section2 {
     /* border: 1px solid red;*/
-}
+} /* [Секция футера 2] */
 
 .section3 {
     /* border: 1px solid red;*/
-}
+} /* [Секция футера 3] */
 
 .section4 {
     /* border: 1px solid red;*/
-}
+} /* [Секция футера 4] */
